<resources>
    <string name="app_name">eKrishi</string>

    <string name="sign_in">Sign In</string>

    <string name="welcome_back">Welcome\nBack!</string>
    <string name="phone_number">Phone Number</string>
    <string name="home">Home</string>
    <string name="weather">Weather</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="temperature_text">30°</string>
    <string name="temperature_text_dynamic">%s° C</string>
    <string name="wind">Wind</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="ekrish">eKrish</string>
    <string name="please_select_a_crop">Please select a crop!</string>
    <string name="fertilizer_amount">সারের পরিমাণ (কেজি):</string>
    <string name="seed_amount">বীজের পরিমাণ (কেজি):</string>
</resources>