<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.LoginActivity">

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="@dimen/_300sdp"
        android:background="@drawable/view_login"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_line_h_20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.20"
        android:orientation="horizontal"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="eKrish"
        android:textColor="@color/ocean_green"
        android:textSize="@dimen/_26sdp"
        android:fontFamily="@font/open_sans"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="i"
        android:fontFamily="@font/plant_font"
        android:textSize="@dimen/_31sdp"
        android:textColor="@color/ocean_green"
        app:layout_constraintTop_toTopOf="@id/app_title"
        app:layout_constraintBottom_toBottomOf="@id/app_title"
        app:layout_constraintStart_toEndOf="@id/app_title"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Welcome\nBack!"
        android:text="@string/welcome_back"
        android:textColor="@color/black"
        android:fontFamily="@font/open_sans"
        android:layout_marginTop="@dimen/_6sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:textSize="@dimen/_20ssp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/guide_line_h_20"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/login_number"
        android:layout_width="0dp"
        android:layout_height="@dimen/_30sdp"
        android:background="@drawable/card_outline_bg"
        android:hint="@string/phone_number"
        android:textSize="@dimen/_10ssp"
        android:fontFamily="@font/open_sans"
        android:inputType="number"
        android:gravity="center_vertical"
        android:drawableStart="@drawable/ic_smartphone"
        android:drawablePadding="@dimen/_5sdp"
        app:layout_constraintTop_toBottomOf="@id/welcome_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_26sdp"
        android:paddingStart="@dimen/_6sdp"
        android:paddingEnd="@dimen/_6sdp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_30sdp"
        app:layout_constraintTop_toBottomOf="@id/login_number"
        app:layout_constraintEnd_toEndOf="@id/login_number"
        android:layout_marginTop="@dimen/_16sdp"
        android:text="@string/sign_in"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_11ssp"
        android:textAllCaps="false"
        android:fontFamily="@font/open_sans"
        android:background="@drawable/ripple_button_bg"/>

</androidx.constraintlayout.widget.ConstraintLayout>