<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragment.WeatherFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_6sdp"
        android:layout_marginStart="@dimen/_6sdp"
        android:layout_marginEnd="@dimen/_6sdp"
        app:cardCornerRadius="@dimen/_4sdp"
        app:cardBackgroundColor="@color/ocean_green"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_8sdp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/weather_thumb"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                app:srcCompat="@drawable/ic_foggy"
                android:scaleType="fitXY"
                android:layout_marginTop="@dimen/_6sdp"
                android:layout_marginStart="@dimen/_10sdp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temperature_text"
                android:textSize="@dimen/_28sdp"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:fontFamily="@font/open_sans"
                android:layout_marginTop="@dimen/_6sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                app:layout_constraintTop_toTopOf="@id/weather_thumb"
                app:layout_constraintBottom_toBottomOf="@id/weather_thumb"
                app:layout_constraintEnd_toEndOf="parent"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/weather_type_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Dense Fog"
                android:textSize="@dimen/_16sdp"
                android:textColor="@android:color/white"
                android:fontFamily="@font/open_sans"
                android:layout_marginTop="@dimen/_6sdp"
                app:layout_constraintTop_toBottomOf="@id/weather_thumb"
                app:layout_constraintStart_toStartOf="@id/weather_thumb"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Morning"
                android:textSize="@dimen/_9ssp"
                android:textColor="@android:color/white"
                android:fontFamily="@font/open_sans"
                android:layout_marginTop="@dimen/_2sdp"
                app:layout_constraintTop_toBottomOf="@id/weather_type_text"
                app:layout_constraintStart_toStartOf="@id/weather_thumb"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        app:cardCornerRadius="@dimen/_4sdp"
        app:cardElevation="@dimen/_1sdp"
        app:layout_constraintTop_toBottomOf="@id/card_1"
        app:layout_constraintStart_toStartOf="@id/card_1"
        app:layout_constraintEnd_toEndOf="@id/card_1">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/_10sdp"
            android:paddingBottom="@dimen/_10sdp"
            android:paddingStart="@dimen/_8sdp"
            android:paddingEnd="@dimen/_8sdp">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guide_33"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.33"/>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guide_66"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.66"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/wind_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wind"
                android:textSize="@dimen/_11ssp"
                android:fontFamily="@font/open_sans"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/guide_33"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="4.01 m/s"
                android:textSize="@dimen/_11ssp"
                android:fontFamily="@font/open_sans"
                android:layout_marginTop="@dimen/_4sdp"
                app:layout_constraintTop_toBottomOf="@id/wind_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/guide_33"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/humidity_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/humidity"
                android:textSize="@dimen/_11ssp"
                android:fontFamily="@font/open_sans"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/guide_33"
                app:layout_constraintEnd_toStartOf="@id/guide_66"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="80 g/kg"
                android:textSize="@dimen/_11ssp"
                android:fontFamily="@font/open_sans"
                android:layout_marginTop="@dimen/_4sdp"
                app:layout_constraintTop_toBottomOf="@id/wind_title"
                app:layout_constraintStart_toEndOf="@id/guide_33"
                app:layout_constraintEnd_toStartOf="@id/guide_66"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/pressure_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pressure"
                android:textSize="@dimen/_11ssp"
                android:fontFamily="@font/open_sans"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/guide_66"
                app:layout_constraintEnd_toEndOf="parent"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1025 hPa"
                android:textSize="@dimen/_11ssp"
                android:fontFamily="@font/open_sans"
                android:layout_marginTop="@dimen/_4sdp"
                app:layout_constraintTop_toBottomOf="@id/wind_title"
                app:layout_constraintStart_toEndOf="@id/guide_66"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/weather_recycler"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scrollbars="none"
        android:overScrollMode="never"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/card_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>